refactor tournament model to be user id centric instead of email centric. This will make it possible for users to submit their results. That will follow up soon.a